--- a/styles/styles.css
+++ b/styles/styles.css
@@ -122,6 +122,7 @@ section h2 {
     gap: 1rem;
     justify-content: space-evenly;
     align-items: stretch;
+    padding: 2rem;
 }
 
 .course-card {
@@ -134,10 +135,12 @@ section h2 {
     transition: transform 0.2s ease, box-shadow 0.2s ease;
     display: flex;            
     flex-direction: column;    
-    justify-content: space-between; 
+    justify-content: space-around; 
     min-height: 100px;             
-    max-width: 100%;
+    max-width: 400px;
 }
+
+
 
 .course-card:hover {
     transform: translateY(-5px);
@@ -147,6 +150,18 @@ section h2 {
 .course-card.completed {
     background-color: #e6ffe6;
     border-color: #88cc88;
+}
+
+#total-credits-container {
+    font-size: 1.2rem;
+    font-weight: bold;
+    color: #333;
+    border: 1px solid #ccc;
+    text-align: center;
+    margin: 1rem auto;
+    background-color: #f4f4f4;
+    max-width: 200px;
+    box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
 }
 
 /* --------------FOOTER-------------------*/
@@ -293,3 +308,4 @@ footer p {
     color: black;
     border-color: #aaa;
 }
+
