--- a/chamber/styles/styles-mobile.css
+++ b/chamber/styles/styles-mobile.css
@@ -321,10 +321,11 @@
   }
 
   #events-section {
-    border: solid black;
+    border: solid 1px #ddd;
     border-radius: 5px;
     margin: 1rem;
     width: 500px;
+    box-shadow: 0 6px 12px rgba(0, 0, 0, 0.15);
   }
 
   #events-section h2 {
@@ -335,6 +336,7 @@
     padding-left: 1rem;
     background-color: #35d91c;
     border-top: none;
+    border-bottom: solid 1px #ddd;
   }
 
   #events-section p {
@@ -342,17 +344,19 @@
   }
 
   #current-weather {
-    border: solid black;
+    border: solid 1px #ddd;
     border-radius: 5px;
     margin: 1rem;
     width: 300px;
+    box-shadow: 0 6px 12px rgba(0, 0, 0, 0.15);
   }
 
   #weather-forecast {
-    border: solid black;
+    border: solid 1px #ddd;
     border-radius: 5px;
     margin: 1rem;
     width: 300px;
+    box-shadow: 0 6px 12px rgba(0, 0, 0, 0.15);
   }
 
   #current-weather h3,
@@ -362,7 +366,7 @@
     padding-top: 0.5rem;
     padding-bottom: 0.5rem;
     background-color: #35d91c;
-    border-bottom: solid black;
+    border-bottom: solid 1px #ddd;
     padding-left: 1rem;
     padding-right: 1rem;
   }
